k8s/seafile-caddy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.service.expose: localhost
    kompose.service.expose.ingress-class-name: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
    nginx.ingress.kubernetes.io/send-timeout: "36000"
  creationTimestamp: null
  labels:
    io.kompose.service: seafile-caddy
  name: seafile-caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: seafile-caddy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.service.expose: localhost
        kompose.service.expose.ingress-class-name: nginx
        nginx.ingress.kubernetes.io/proxy-body-size: "0"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
        nginx.ingress.kubernetes.io/send-timeout: "36000"
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.network/compose-seafile-net: "true"
        io.kompose.service: seafile-caddy
    spec:
      containers:
        - image: ggogel/seafile-caddy:2.7.5
          name: seafile-caddy
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
