k8s/seahub-media-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.service.expose.storage-class-name: default
    kompose.volume.size: 100Mi
  creationTimestamp: null
  labels:
    io.kompose.service: seahub-media
  name: seahub-media
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: seahub-media
status:
  loadBalancer: {}
