k8s/seafile-caddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.service.expose: localhost
    kompose.service.expose.ingress-class-name: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
    nginx.ingress.kubernetes.io/send-timeout: "36000"
  creationTimestamp: null
  labels:
    io.kompose.service: seafile-caddy
  name: seafile-caddy
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: seafile-caddy
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
